@@ -1,3 +1,8 @@
+2020-03-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Rcpp/Environment.h: Added two Shield<SEXP> wrappers
+	around Rf_langX calls
+
 2020-03-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml (script): Run coverage as parallel step
